5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4177/executions/1644_1053.log
== TEST (2019-04-15 10:03:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("Qual o patrono?:  ")
if (nome == "cervo"):
	 mensagem = nome+ " eh patrono do Harry Potter"
else:
	mensagem = nome + "nao eh patrono do Harry Potter"
	
pint(mensagem)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    pint(mensagem)	
NameError: name 'pint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:03:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("Qual o patrono?:  ")
if (nome == "cervo"):
	 mensagem = nome+ " eh patrono do Harry Potter"
else:
	mensagem = nome + "nao eh patrono do Harry Potter"
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:03:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("Qual o patrono?:  ")
if (nome == "cervo"):
	 mensagem = nome+ " eh patrono do Harry Potter"
else:
	mensagem = nome + "nao eh patrono do Harry Potter"
	
print(mensagem)	
-- EXECUTION TIME:
0.129357
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:04:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("Qual o patrono?:  ")
if (nome == "cervo"):
	 mensagem = nome + " eh patrono do Harry Potter"
else:
	 mensagem = nome + "nao eh patrono do Harry Potter"
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:04:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("Qual o patrono?:  ")
if (nome == "cervo"):
	 mensagem = nome + " eh patrono do Harry Potter"
else:
	 mensagem = nome + " nao eh patrono do Harry Potter"
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:04:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("Qual o patrono?:  ")
if (nome == "cervo"):
	 mensagem = nome + " eh patrono do Harry Potter"
else:
	 mensagem = nome + " nao eh patrono do Harry Potter"
	
print(mensagem)	
-- EXECUTION TIME:
0.22351
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
